<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/lanHeader">


        <ListPreference
            app:defaultValue="es"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="Languages"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/map_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/range_entries"
            android:entryValues="@array/range_values"
            android:key="range"
            android:title="@string/rangeHeader" />

        <SwitchPreferenceCompat
            app:key="searchFZ"
            app:title="@string/search_fzHeader" />

        <SwitchPreferenceCompat
            app:dependency="searchFZ"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>