<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_places"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_testSettings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_information"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/info" />
    </group>
</menu>