<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.inchko.parkfinder.ui.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.inchko.parkfinder.ui.proflie.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.inchko.parkfinder.ui.settings.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>